@@ -30,30 +30,25 @@ package javaff.data;
 
 import java.math.BigDecimal;
 
-public class TimeStampedAction implements Comparable
-{
+public class TimeStampedAction implements Comparable {
 	public Action action;
 	public BigDecimal time;
 	public BigDecimal duration;
 
-	public TimeStampedAction(Action a, BigDecimal t, BigDecimal d)
-	{
+	public TimeStampedAction(Action a, BigDecimal t, BigDecimal d) {
 		action = a;
 		time = t;
 		duration = d;
 	}
 
-	public String toString()
-	{
-		String str = time +": ("+action+")";
-		if (duration != null) str += " ["+duration+"]";
+	public String toString() {
+		String str = duration != null ? time + ": (" + action + ")" + " [" + duration + "]" : time + ": (" + action + ")";
 		return str;
 	}
 
-	public int compareTo(Object o)
-	{
+	public int compareTo(Object o) {
 		TimeStampedAction that = (TimeStampedAction) o;
-		if (this.time.compareTo(that.time) != 0) return this.time.compareTo(that.time);
-		return ((new Integer(this.action.hashCode())).compareTo(new Integer(that.action.hashCode())));
+		return this.time.compareTo(that.time) != 0 ? this.time.compareTo(that.time)
+				: (Integer.valueOf(this.action.hashCode())).compareTo(Integer.valueOf(that.action.hashCode()));
 	}
 }
