@@ -33,96 +33,86 @@ import java.util.Comparator;
 import java.util.Hashtable;
 import java.util.Iterator;
 import java.util.LinkedList;
-import java.util.Set;
 
 import javaff.planning.Filter;
 import javaff.planning.State;
 
-public class EnforcedHillClimbingSearch extends Search
-{
+public class EnforcedHillClimbingSearch extends Search {
 	protected BigDecimal bestHValue;
 
 	protected Hashtable closed;
 	protected LinkedList open;
-	protected Filter filter = null;
-	
-	public EnforcedHillClimbingSearch(State s)
-	{
+	protected Filter filter;
+
+	public EnforcedHillClimbingSearch(State s) {
 		this(s, new HValueComparator());
 	}
 
-	public EnforcedHillClimbingSearch(State s, Comparator c)
-	{
+	public EnforcedHillClimbingSearch(State s, Comparator c) {
 		super(s);
 		setComparator(c);
-		
+
 		closed = new Hashtable();
 		open = new LinkedList();
 	}
 
-	public void setFilter(Filter f)
-	{
+	public void setFilter(Filter f) {
 		filter = f;
 	}
 
-	public State removeNext()
-	{
-			
+	public State removeNext() {
+
 		return (State) ((LinkedList) open).removeFirst();
 	}
-	
+
 	public boolean needToVisit(State s) {
-		Integer Shash = new Integer(s.hashCode()); // compute hash for state
-		State D = (State) closed.get(Shash); // see if its on the closed list
-		
-		if (closed.containsKey(Shash) && D.equals(s)) return false;  // if it is return false
-		
-		closed.put(Shash, s); // otherwise put it on
+		Integer shash;
+		shash = Integer.valueOf(s.hashCode()); // compute hash for state
+		State dState = (State) closed.get(shash); // see if its on the closed list
+
+		if (closed.containsKey(shash) && dState.equals(s))
+			return false; // if it is return false
+
+		closed.put(shash, s); // otherwise put it on
 		return true; // and return true
 	}
-	
-	public State search() {
-		
-		if (start.goalReached()) { // wishful thinking
-			return start;
-		}
 
-		needToVisit(start); // dummy call (adds start to the list of 'closed' states so we don't visit it again
-		
+	public State search() {
+
+		if (start.goalReached())
+			return start;
+
+		needToVisit(start); // dummy call (adds start to the list of 'closed' states so we don't visit it
+							// again
+
 		open.add(start); // add it to the open list
 		bestHValue = start.getHValue(); // and take its heuristic value as the best so far
 
 		javaff.JavaFF.infoOutput.println(bestHValue);
-		
+
 		while (!open.isEmpty()) // whilst still states to consider
-		{	
+		{
 			State s = removeNext(); // get the next one
-			
-			Set successors = s.getNextStates(filter.getActions(s)); // and find its neighbourhood
-			
-			Iterator succItr = successors.iterator();			
-		
+
+			Iterator succItr = s.getNextStates(filter.getActions(s)).iterator();
+
 			while (succItr.hasNext()) {
 				State succ = (State) succItr.next(); // next successor
-			
-				if (needToVisit(succ)) {
-					if (succ.goalReached()) { // if we've found a goal state - return it as the solution
+
+				if (needToVisit(succ))
+					if (succ.goalReached()) {
 						return succ;
 					} else if (succ.getHValue().compareTo(bestHValue) < 0) {
-						// if we've found a state with a better heuristic value than the best seen so far
-					
-						bestHValue = succ.getHValue(); // note the new best avlue
+						bestHValue = succ.getHValue();
 						javaff.JavaFF.infoOutput.println(bestHValue);
-						open = new LinkedList(); // clear the open list
-						open.add(succ); // put this on it
-						break; // and skip looking at the other successors
+						open = new LinkedList();
+						open.add(succ);
+						break;
 					} else {
-						open.add(succ); // otherwise, add to the open list
+						open.add(succ);
 					}
-				}
 			}
-			
-			
+
 		}
 		return null;
 	}
